--- a/dev/unsloth.ipynb
+++ b/dev/unsloth.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_33648/2039048723.py:2: UserWarning: WARNING: Unsloth should be imported before transformers, peft to ensure all optimizations are applied. Your code may run slower or encounter memory issues without these optimizations.\n",
+      "/tmp/ipykernel_17245/1738458828.py:2: UserWarning: WARNING: Unsloth should be imported before transformers, peft to ensure all optimizations are applied. Your code may run slower or encounter memory issues without these optimizations.\n",
       "\n",
       "Please restructure your imports with 'import unsloth' at the top of your file.\n",
       "  import unsloth # type: ignore\n"
@@ -31,36 +31,36 @@
      "text": [
       "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
       "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
-      "INFO 04-04 21:17:32 __init__.py:207] Automatically detected platform cuda.\n",
+      "INFO 04-04 22:48:07 __init__.py:207] Automatically detected platform cuda.\n",
       "==((====))==  Unsloth 2025.3.19: Fast Qwen2 patching. Transformers: 4.49.0. vLLM: 0.7.3.\n",
       "   \\\\   /|    NVIDIA H100 80GB HBM3. Num GPUs = 1. Max memory: 79.109 GB. Platform: Linux.\n",
       "O^O/ \\_/ \\    Torch: 2.5.1+cu124. CUDA: 9.0. CUDA Toolkit: 12.4. Triton: 3.1.0\n",
       "\\        /    Bfloat16 = TRUE. FA [Xformers = 0.0.29.post1. FA2 = False]\n",
       " \"-____-\"     Free license: http://github.com/unslothai/unsloth\n",
       "Unsloth: Fast downloading is enabled - ignore downloading bars which are red colored!\n",
-      "Unsloth: vLLM loading unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit with actual GPU utilization = 79.39%\n",
+      "Unsloth: vLLM loading unsloth/qwen2.5-14b-instruct-unsloth-bnb-4bit with actual GPU utilization = 79.39%\n",
       "Unsloth: Your GPU has CUDA compute capability 9.0 with VRAM = 79.11 GB.\n",
       "Unsloth: Using conservativeness = 1.0. Chunked prefill tokens = 32768. Num Sequences = 368.\n",
-      "Unsloth: vLLM's KV Cache can use up to 56.94 GB. Also swap space = 6 GB.\n",
-      "INFO 04-04 21:17:42 config.py:549] This model supports multiple tasks: {'generate', 'embed', 'reward', 'classify', 'score'}. Defaulting to 'generate'.\n",
-      "Unsloth: vLLM Bitsandbytes config using kwargs = {'load_in_8bit': False, 'load_in_4bit': True, 'bnb_4bit_compute_dtype': 'bfloat16', 'bnb_4bit_quant_storage': 'uint8', 'bnb_4bit_quant_type': 'nf4', 'bnb_4bit_use_double_quant': True, 'llm_int8_enable_fp32_cpu_offload': False, 'llm_int8_has_fp16_weight': False, 'llm_int8_skip_modules': ['lm_head', 'multi_modal_projector', 'merger', 'modality_projection', 'model.layers.0.self_attn', 'model.layers.1.self_attn', 'model.layers.2.mlp', 'model.layers.3.mlp', 'model.layers.4.mlp', 'model.layers.25.mlp', 'model.layers.26.mlp'], 'llm_int8_threshold': 6.0}\n",
-      "INFO 04-04 21:17:42 llm_engine.py:234] Initializing a V0 LLM engine (v0.7.3) with config: model='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', speculative_config=None, tokenizer='unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=32768, download_dir=None, load_format=LoadFormat.BITSANDBYTES, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=bitsandbytes, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='xgrammar'), observability_config=ObservabilityConfig(otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, num_scheduler_steps=16, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[368,360,352,344,336,328,320,312,304,296,288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":368}, use_cached_outputs=False, \n",
-      "INFO 04-04 21:17:42 cuda.py:229] Using Flash Attention backend.\n",
-      "WARNING 04-04 21:17:42 registry.py:335] `mm_limits` has already been set for model=unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit, and will be overwritten by the new values.\n",
-      "INFO 04-04 21:17:43 model_runner.py:1110] Starting to load model unsloth/qwen2.5-7b-instruct-unsloth-bnb-4bit...\n",
-      "INFO 04-04 21:17:43 loader.py:1089] Loading weights with BitsAndBytes quantization.  May take a while ...\n",
-      "INFO 04-04 21:17:44 weight_utils.py:254] Using model weights format ['*.safetensors']\n"
+      "Unsloth: vLLM's KV Cache can use up to 52.15 GB. Also swap space = 6 GB.\n",
+      "INFO 04-04 22:48:17 config.py:549] This model supports multiple tasks: {'reward', 'score', 'classify', 'generate', 'embed'}. Defaulting to 'generate'.\n",
+      "Unsloth: vLLM Bitsandbytes config using kwargs = {'load_in_8bit': False, 'load_in_4bit': True, 'bnb_4bit_compute_dtype': 'bfloat16', 'bnb_4bit_quant_storage': 'uint8', 'bnb_4bit_quant_type': 'nf4', 'bnb_4bit_use_double_quant': True, 'llm_int8_enable_fp32_cpu_offload': False, 'llm_int8_has_fp16_weight': False, 'llm_int8_skip_modules': ['lm_head', 'multi_modal_projector', 'merger', 'modality_projection', 'model.layers.5.mlp', 'model.layers.24.mlp', 'model.layers.44.mlp', 'model.layers.46.mlp', 'model.layers.23.self_attn'], 'llm_int8_threshold': 6.0}\n",
+      "INFO 04-04 22:48:17 llm_engine.py:234] Initializing a V0 LLM engine (v0.7.3) with config: model='unsloth/qwen2.5-14b-instruct-unsloth-bnb-4bit', speculative_config=None, tokenizer='unsloth/qwen2.5-14b-instruct-unsloth-bnb-4bit', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=32768, download_dir=None, load_format=LoadFormat.BITSANDBYTES, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=bitsandbytes, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='xgrammar'), observability_config=ObservabilityConfig(otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=unsloth/qwen2.5-14b-instruct-unsloth-bnb-4bit, num_scheduler_steps=16, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[368,360,352,344,336,328,320,312,304,296,288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":368}, use_cached_outputs=False, \n",
+      "INFO 04-04 22:48:18 cuda.py:229] Using Flash Attention backend.\n",
+      "WARNING 04-04 22:48:18 registry.py:335] `mm_limits` has already been set for model=unsloth/qwen2.5-14b-instruct-unsloth-bnb-4bit, and will be overwritten by the new values.\n",
+      "INFO 04-04 22:48:18 model_runner.py:1110] Starting to load model unsloth/qwen2.5-14b-instruct-unsloth-bnb-4bit...\n",
+      "INFO 04-04 22:48:18 loader.py:1089] Loading weights with BitsAndBytes quantization.  May take a while ...\n",
+      "INFO 04-04 22:48:21 weight_utils.py:254] Using model weights format ['*.safetensors']\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "586db27787af477a94c2ce49626c876c",
+       "model_id": "3a60a6bc94bf4a47b6cfd2d93df5e3d5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading safetensors checkpoint shards:   0% Completed | 0/2 [00:00<?, ?it/s]\n"
+       "Loading safetensors checkpoint shards:   0% Completed | 0/3 [00:00<?, ?it/s]\n"
       ]
      },
      "metadata": {},
@@ -69,12 +69,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3d43ffa163142d0a187f956912bf7f7",
+       "model_id": "84559cb5da524c8cbc15e6a7c1496961",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading safetensors checkpoint shards:   0% Completed | 0/2 [00:00<?, ?it/s]\n"
+       "Loading safetensors checkpoint shards:   0% Completed | 0/3 [00:00<?, ?it/s]\n"
       ]
      },
      "metadata": {},
@@ -84,29 +84,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 04-04 21:17:46 model_runner.py:1115] Loading model weights took 6.6961 GB\n",
-      "INFO 04-04 21:17:46 punica_selector.py:18] Using PunicaWrapperGPU.\n",
-      "INFO 04-04 21:17:49 worker.py:267] Memory profiling takes 2.22 seconds\n",
-      "INFO 04-04 21:17:49 worker.py:267] the current vLLM instance can use total_gpu_memory (79.11GiB) x gpu_memory_utilization (0.79) = 62.81GiB\n",
-      "INFO 04-04 21:17:49 worker.py:267] model weights take 6.70GiB; non_torch_memory takes 0.15GiB; PyTorch activation peak memory takes 4.72GiB; the rest of the memory reserved for KV Cache is 51.24GiB.\n",
-      "INFO 04-04 21:17:49 executor_base.py:111] # cuda blocks: 59962, # CPU blocks: 7021\n",
-      "INFO 04-04 21:17:49 executor_base.py:116] Maximum concurrency for 32768 tokens per request: 29.28x\n",
-      "INFO 04-04 21:17:51 model_runner.py:1434] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
+      "INFO 04-04 22:48:26 model_runner.py:1115] Loading model weights took 10.6011 GB\n",
+      "INFO 04-04 22:48:26 punica_selector.py:18] Using PunicaWrapperGPU.\n",
+      "INFO 04-04 22:48:29 worker.py:267] Memory profiling takes 3.18 seconds\n",
+      "INFO 04-04 22:48:29 worker.py:267] the current vLLM instance can use total_gpu_memory (79.11GiB) x gpu_memory_utilization (0.79) = 62.81GiB\n",
+      "INFO 04-04 22:48:29 worker.py:267] model weights take 10.60GiB; non_torch_memory takes 0.15GiB; PyTorch activation peak memory takes 4.26GiB; the rest of the memory reserved for KV Cache is 47.80GiB.\n",
+      "INFO 04-04 22:48:29 executor_base.py:111] # cuda blocks: 16314, # CPU blocks: 2048\n",
+      "INFO 04-04 22:48:29 executor_base.py:116] Maximum concurrency for 32768 tokens per request: 7.97x\n",
+      "INFO 04-04 22:48:31 model_runner.py:1434] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Capturing CUDA graph shapes: 100%|██████████| 49/49 [00:30<00:00,  1.62it/s]"
+      "Capturing CUDA graph shapes: 100%|██████████| 49/49 [00:38<00:00,  1.26it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 04-04 21:18:22 model_runner.py:1562] Graph capturing finished in 30 secs, took 5.56 GiB\n",
-      "INFO 04-04 21:18:22 llm_engine.py:436] init engine (profile, create kv cache, warmup model) took 35.23 seconds\n"
+      "INFO 04-04 22:49:10 model_runner.py:1562] Graph capturing finished in 39 secs, took 9.48 GiB\n",
+      "INFO 04-04 22:49:10 llm_engine.py:436] init engine (profile, create kv cache, warmup model) took 44.74 seconds\n"
      ]
     },
     {
@@ -114,7 +114,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Unsloth 2025.3.19 patched 28 layers with 28 QKV layers, 28 O layers and 28 MLP layers.\n"
+      "Unsloth 2025.3.19 patched 48 layers with 48 QKV layers, 48 O layers and 48 MLP layers.\n"
      ]
     }
    ],
@@ -125,10 +125,11 @@
     "from art.unsloth.state import ModelState\n",
     "\n",
     "config = get_model_config(\n",
-    "    \"Qwen/Qwen2.5-7B-Instruct\",\n",
+    "    \"Qwen/Qwen2.5-14B-Instruct\",\n",
     "    output_dir=\"./.art/models/test\",\n",
     "    config={\n",
     "        \"init_args\": {\n",
+    "            \"max_seq_length\": 32768,\n",
     "            \"enable_sleep_mode\": True,\n",
     "        }\n",
     "    },\n",
@@ -138,7 +139,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "709"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(state.vllm.async_engine.engine.cache_config.num_gpu_blocks * state.vllm.async_engine.engine.cache_config.block_size) // state.vllm.async_engine.engine.scheduler_config.max_num_seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "368"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state.vllm.async_engine.engine.scheduler_config.max_num_seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +221,7 @@
     "                0,\n",
     "                int(state.tokenizer.vocab_size),  # type: ignore\n",
     "                (\n",
-    "                    (\n",
+    "                    max(\n",
     "                        (\n",
     "                            (\n",
     "                                state.vllm.async_engine.engine.cache_config.num_gpu_blocks  # type: ignore\n",
@@ -171,7 +230,8 @@
     "                            // state.vllm.async_engine.engine.scheduler_config.max_num_seqs\n",
     "                        )\n",
     "                        - 16\n",
-    "                        - max_tokens\n",
+    "                        - max_tokens,\n",
+    "                        1,\n",
     "                    ),\n",
     "                ),\n",
     "            ).tolist(),\n",
@@ -192,9 +252,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Request 0 already exists.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[30]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mawait\u001b[39;00m asyncio.sleep(\u001b[32m0.01\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[43mwarmup_future\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m asyncio.CancelledError:\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mpass\u001b[39;00m\n",
+      "\u001b[31mKeyError\u001b[39m: 'Request 0 already exists.'"
+     ]
+    }
+   ],
    "source": [
     "warmup_future.cancel()\n",
     "await asyncio.sleep(0.01)\n",
@@ -206,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +289,7 @@
       "   \\\\   /|    Num examples = 100,000 | Num Epochs = 3 | Total steps = 300,000\n",
       "O^O/ \\_/ \\    Batch size per device = 2 | Gradient accumulation steps = 1\n",
       "\\        /    Data Parallel GPUs = 1 | Total batch size (2 x 1 x 1) = 2\n",
-      " \"-____-\"     Trainable parameters = 20,185,088/7,000,000,000 (0.29% trained)\n"
+      " \"-____-\"     Trainable parameters = 34,406,400/14,000,000,000 (0.25% trained)\n"
      ]
     }
    ],
@@ -231,36 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'loss': 0.0, 'grad_norm': 0.0, 'lr': 1e-07, 'policy_loss': 0.0}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'loss': 0.0, 'grad_norm': 0.0, 'lr': 1e-07, 'policy_loss': 0.0}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'loss': 0.0, 'grad_norm': 0.0, 'lr': 1e-07, 'policy_loss': 0.0}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/plain": [
@@ -277,10 +322,10 @@
     "import torch\n",
     "from typing import cast\n",
     "\n",
-    "shape = (8, config.get(\"init_args\", {}).get(\"max_seq_len\", 8192))\n",
+    "shape = (1, config.get(\"init_args\", {}).get(\"max_seq_length\", 8192))\n",
     "\n",
     "async with state.vllm.train_mode():\n",
-    "    for _ in range(4):\n",
+    "    for _ in range(1):\n",
     "        state.inputs_queue.put_nowait(\n",
     "            TuneInputs(\n",
     "                tokens=torch.randint(0, cast(int, state.tokenizer.vocab_size), shape),\n",
